--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        /* Fondo base animado inspirado en SAVIKA (Cyan, Azul, Magenta) */
-        background: linear-gradient(-45deg, #06b6d4, #3b82f6, #d946ef, #8b5cf6);
+        /* Fondo base animado inspirado en el logo SK (Púrpura, Azul, Cian) */
+        background: linear-gradient(-45deg, #a855f7, #3b82f6, #06b6d4, #8b5cf6);
         background-size: 400% 400%;
         animation: gradient 15s ease infinite;
         margin: 0;
